# flash_excel

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .tufup-repo-config  LICENSE  README.md  cliff.toml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements.in
.github/instructions/: README.md
.github/instructions/core/: MANIFEST.md  core-agentic-collaboration.instructions.md  core-cognitive-conduct.instructions.md  core-commits-git.instructions.md  core-decision-framework.instructions.md  core-hexagonal-architecture.instructions.md  core-ops-infrastructure.instructions.md  core-security-sanitization.instructions.md  hexagonal-architecture-standards.instructions.md
.github/instructions/languages/python/: MANIFEST.md  python-architecture-design.instructions.md  python-concurrency-performance.instructions.md  python-core.instructions.md  python-docs.instructions.md  python-project-config.instructions.md  python-security-ops.instructions.md  python-style-layout.instructions.md  python-testing-quality.instructions.md  python-typing.instructions.md
.github/workflows/: README_DOC.md  auto-tag.yml  docs.yml
.hooks/: hooks-usage.md  pre-commit
.scripts/dev/: generate_architecture_graph.py  lint.py  update_version.py
.tufup/repo/metadata/: 1.root.json  snapshot.json  targets.json  timestamp.json
hooks/: hook-fastexcel.py  hook-polars.py  hook-pydantic_core.py
src/flash_excel/: __init__.py  _version.py  config.py  paths.py  updater.py
src/flash_excel/core/: __init__.py  models.py  pipeline.py  registry.py
src/flash_excel/core/steps/: __init__.py  cast.py  clean.py  computed.py  deduplicate.py  drop.py  fill.py  filter.py  rename.py  reorder.py  replace.py  select.py  sort.py  trim.py
src/flash_excel/io/: __init__.py  loader.py  models.py  writer.py
src/flash_excel/presets/: __init__.py  parser.py  store.py
src/flash_excel/ui/: __init__.py  api.py  app.py
src/flash_excel/ui/pages/: presets.py
src/flash_excel/ui/web/: index.html
src/flash_excel/ui/web/css/: app.css  presets.css  processing.css  tokens.css
src/flash_excel/ui/web/js/: api.js  i18n.js
src/flash_excel/ui/web/js/components/: ActionSteps.js  AppShell.js  FileLoader.js  LucideIcon.js  SettingsModal.js
src/flash_excel/ui/web/js/components/tables/: CastTable.js  CleanTable.js  ComputedTable.js  DeduplicateTable.js  FilterTable.js  OneColumnTable.js  RenameTable.js  ReorderTable.js  ReplaceTable.js  SelectTable.js  SortTable.js  TwoColumnTable.js
src/flash_excel/ui/web/js/locales/: en.js  fr.js
src/flash_excel/ui/web/js/pages/: Presets.js  Processing.js
src/flash_excel/ui/widgets/: action_steps.py
tests/: test_config.py  test_processing_api.py  test_writer.py
